# SIMDMultiproc

./: .gitignore  2  README.md
.nvim/svlangserver/: index.json  linter.vc
compiler/: Algo.cpp  Algo.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Command.cpp  Command.h  Graph.cpp  Graph.h  Makefile  Operator.cpp  Operator.h  Solver.cpp  Toeplitz.h  Vec.h  main.cpp  test
compiler/.cache/clangd/index/: Algo.h.1233ABEFD299CC74.idx  Buffer.h.0CE930D5C898244C.idx  Command.h.5E3B51970058EF78.idx  Graph.h.083E9AF434B31E31.idx  Operator.h.E7C5E47234E3B9C1.idx  Solver.h.8899F9760C3B6832.idx  Toeplitz.h.BF84BCB11EA1BFA9.idx  Vec.h.088B294921DC49F6.idx  matmul.cpp.788F163DD74C9EDE.idx
compiler/src/: Algo.cpp  Algo.h  Buffer.cpp  Buffer.h  Command.cpp  Command.h  Graph.cpp  Graph.h  Operator.cpp  Operator.h  Solver.cpp  Solver.h  Toeplitz.h  Vec.h  config.h
compiler/test/: gen_cmd.cpp  matmul.cpp
compiler/tests/: matmul.cpp
hardware/: 3  adder.sv  arbiter.sv  arbiter.v  arbitration_algorithm.sv  arithmetic_unit.sv  array.sv  cam_test.sv  core.sv  defines.sv  defines.svh  encoder.sv  fifo.sv  find_first_set_bit.sv  issuer.sv  issuer.v  mem.sv  mem.v  mmul.sv  multiplexer.sv  multiplier.sv  notes.txt  pool.sv  pool.v  proc.sv  queue.sv  queue.v  rob.sv  run_tests.sh  scoreboard.sv  scoreboard.v  shared_mem.sv  shared_mem.v  simd_fsm.sv  tb_array.sv  tb_issuer.sv  tb_mem.sv  tb_proc.sv  tb_scoreboard.sv  tb_top.sv  (+2 more)
software/: Command.c  Command.h  Makefile  Matrix.c  Matrix.h  Product.c  Product.h  Solver.c  Solver.h  Vector.c  Vector.h  main.c  product_processor
(+32 files in other folders)
